--- a/style/global.css
+++ b/style/global.css
@@ -24,6 +24,13 @@
 	 |	   | - #headerAboutMenu
 	 |	   |     | - p
      |
+     | - .errorBox
+     |     | - .errorLeft
+     |     |     | - img
+     |     | - .errorRight
+     |     |     | - h2
+     |     |     | - p
+     |
      | - #content
      |     | - #location
 	 |	   |     | - div
@@ -35,9 +42,16 @@
 	 |	   |     | - .GREEN
      |     |     | - .RED
      |     |     | - .GREY
+     |	   |     | - .doorBOTTOM
+     |	   |     | - .doorTOP
+     |	   |     | - .doorLEFT
+     |	   |     | - .doorRIGHT
+     |	   |     | - .doorBOTTOM
+     |     |
+     |     | - #legend
      |
      | - #footer
-     |     |
+     |     | - #footerTitle
 */
 
 body {
@@ -45,6 +59,7 @@ body {
 	background-color:#ff9500;
 	background-repeat:repeat-x;
 	font-family:"Geneva", "Lucida Sans", "Lucida Grande", "Lucida Sans Unicode", "Verdana", sans-serif;
+	font-size:12px;
 	margin:0px;
 }
 
@@ -89,9 +104,11 @@ img {
 #container #content {
 	position:relative;
 	float:center;
-	width:810px;
+	width:770px;
 	margin-left:auto;
 	margin-right:auto;
+	padding-left:20px;
+	padding-right:20px;
 }
 
 #container #footer {
@@ -130,10 +147,49 @@ img {
 	z-index:9999;
 }
 
-#headerBldgMenu, #headerAboutMenu p{
+#headerBldgMenu p, #headerAboutMenu p{
 	margin:5px;
 	font-size:14px;
 }
+
+/* ERROR BOX ========================== */
+
+.errorBox {
+	position:relative;
+	float:center;
+	margin-left:auto;
+	margin-right:auto;
+	width:700px;
+	background-color:#ff9500;
+	border:solid 5px black;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+}
+
+.errorBox .errorRight {
+	width:75%;
+}
+
+.errorBox h2 {
+	font-size:20px;
+	margin-top:5px;
+	margin-bottom:5px;
+}
+
+.errorBox p {
+	font-size:14px;
+}
+
+.errorBox .errorLeft {
+	width:25%;
+	text-align:center;
+	vertical-align:middle;
+}
+
+.errorBox .errorLeft img {
+	margin-top:5px;
+}
+	
 
 /* LOCATION =========================== */
 
@@ -143,7 +199,10 @@ img {
 	margin-left:auto;
 	margin-right:auto;
 	margin-bottom:30px;
-background-color:green;
+	background-color:white;
+	border:solid 10px black;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
 }
 
 #location div {
@@ -187,7 +246,7 @@ background-color:green;
 }
 
 #location .GREEN {
-	background-color:#1BFA4E;
+	background-color:#4cd900;
 }
 
 #location .RED {
@@ -195,9 +254,37 @@ background-color:green;
 }
 
 #location .GREY {
-	background-color:#B9B9B9;
+	background-color:#8A8A8A;
 }
 
+#location .door {
+	height:60px;
+	width:60px;
+}
 
+#content #legend {
+	position:relative;
+	float:center;
+	margin-left:auto;
+	margin-right:auto;
+	width:700px;
+	border:solid 10px black;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+	background-color:white;
+	text-align:center;
+}
 
+#content #legend img {
+	margin:10px;
+}
+
+/* FOOTER ====================== */
+#footer {
+	text-align:center;
+}
+
+#footerImage {
+	margin-top:115px;
+}
 	
